--- a/package.json
+++ b/package.json
@@ -7,5 +7,23 @@
     "bootstrap-vue": "^2.1.0",
     "moment": "^2.24.0",
     "xlsx": "^0.15.3"
-  }
+  },
+  "name": "vue-excel-editor",
+  "description": "Vue2 plugin for displaying and editing the array-of-object in Excel style",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cscan/vue-excel-editor.git"
+  },
+  "author": "Kenneth Cheng",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cscan/vue-excel-editor/issues"
+  },
+  "homepage": "https://github.com/cscan/vue-excel-editor#readme"
 }
