--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "vue-excel-editor",
   "email": "apple.6502@gmail.com",
   "description": "Vue2 plugin for displaying and editing the array-of-object in Excel style",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
@@ -18,11 +18,32 @@
     "url": "git+https://github.com/cscan/vue-excel-editor.git"
   },
   "keywords": [
-    "vue", "vue2", "vuejs", "excel", "data", "grid", "table", "v-model",
-    "editor", "editable", "javascript", "DHTML", "no-jquery", "grid-editor",
-    "online-editor", "data-grid", "data-table", "spreadsheet", "tabular-data",
-    "edit-cell", "editable-table", "data-spreadsheet", "bootstrap", "responsive",
-    "navigatable", "contenteditable"
+    "vue",
+    "vue2",
+    "vuejs",
+    "excel",
+    "data",
+    "grid",
+    "table",
+    "v-model",
+    "editor",
+    "editable",
+    "javascript",
+    "DHTML",
+    "no-jquery",
+    "grid-editor",
+    "online-editor",
+    "data-grid",
+    "data-table",
+    "spreadsheet",
+    "tabular-data",
+    "edit-cell",
+    "editable-table",
+    "data-spreadsheet",
+    "bootstrap",
+    "responsive",
+    "navigatable",
+    "contenteditable"
   ],
   "author": "Kenneth Cheng",
   "license": "MIT",
