--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "email": "apple.6502@gmail.com",
   "description": "Vue2 plugin for displaying and editing the array-of-object in Excel style",
   "version": "1.3.1",
-  "main": "src/main.js",
+  "main": "dist/vue-excel-editor.umd.js",
   "module": "dist/vue-excel-editor.esm.js",
+  "unpkg": "dist/vue-excel-editor.min.js",
   "dependencies": {
     "moment": "^2.24.0",
     "vue2-datepicker": "^3.3.0",
