--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "email": "apple.6502@gmail.com",
   "description": "Vue2 plugin for displaying and editing the array-of-object in Excel style",
   "version": "1.3.6",
+  "_main": "src/main.js",
   "main": "dist/vue-excel-editor.umd.js",
   "module": "dist/vue-excel-editor.esm.js",
   "unpkg": "dist/vue-excel-editor.min.js",
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.0.0",
     "rollup": "^1.17.0",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-babel-minify": "^9.1.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-porter": "^1.0.2",
     "rollup-plugin-vue": "^5.1.5",
