--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.5.5",
   "main": "src/main.js",
   "dependencies": {
+    "date-fns": "^2.28.0",
     "moment": "^2.29.3",
     "vue2-datepicker": "^3.3.0",
     "vuedraggable": "^2.23.2",
