fix autocomplete bug

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.5.20",
   "main": "src/main.js",
   "dependencies": {
+    "moment": "^2.30.1",
     "vue2-datepicker": "^3.3.0",
     "vuedraggable": "^2.23.2",
     "xlsx": "^0.17.0"
